samples/_failures_safe/1761661110_afe91d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d83dbc4.c: In function ‘main’:
./samples/SAFE/__tmp_7d83dbc4.c:160:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  160 |     int edges[][3]
      |     ^~~
./samples/SAFE/__tmp_7d83dbc4.c:160:5: error: expected declaration or statement at end of input
